Bug 280873 - networkmangement applet crash when connecting to a new wireless hotspot
Summary: networkmangement applet crash when connecting to a new wireless hotspot
Status: RESOLVED FIXED
Alias: None
Product: kde
Classification: I don't know
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-27 09:13 UTC by Nelson Chan
Modified: 2011-08-27 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nelson Chan 2011-08-27 09:13:59 UTC
Application: networkmanagement_configshell ()
KDE Platform Version: 4.7.00 (4.7.0) (Compiled from sources)
Qt Version: 4.7.3
Operating System: Linux 3.0-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:

1. Click the network management applet icon on the tray
2. Click show more to display new wireless station
3. connect to any new hotspot
Crash!

The crash can be reproduced every time.

-- Backtrace:
Application: Network Management (networkmanagement_configshell), signal: Aborted
[Current thread is 1 (Thread 0x7fb7d215c760 (LWP 21583))]

Thread 2 (Thread 0x7fb7c1b2e700 (LWP 21584)):
#0  0x00007fb7cc38ed7c in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x00007fb7caddae6a in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#2  0x00007fb7caddb7f2 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007fb7caddbd09 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007fb7cfb8079e in QEventDispatcherGlib::processEvents (this=0xb5db40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fb7cfb50992 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fb7cfb50b97 in QEventLoop::exec (this=0x7fb7c1b2dde0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fb7cfa5b209 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:492
#8  0x00007fb7cfb31523 in QInotifyFileSystemWatcherEngine::run (this=0xb65bc0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fb7cfa5e16a in QThreadPrivate::start (arg=0xb65bc0) at thread/qthread_unix.cpp:320
#10 0x00007fb7cc38bd60 in start_thread () from /lib/libpthread.so.0
#11 0x00007fb7ce71614d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fb7d215c760 (LWP 21583)):
[KCrash Handler]
#6  0x00007fb7ce6776c5 in raise () from /lib/libc.so.6
#7  0x00007fb7ce678b3b in abort () from /lib/libc.so.6
#8  0x00007fb7cfa53244 in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2282
#9  0x00007fb7d16263cc in KNetworkManagerServicePrefs::self() () from /usr/lib/libknminternals.so.4
#10 0x00007fb7d18a7652 in TlsWidget::TlsWidget(bool, Knm::Connection*, QWidget*) () from /usr/lib/libknmui.so.4
#11 0x00007fb7d189e928 in SecurityEap::SecurityEap(Knm::Connection*, bool, QWidget*) () from /usr/lib/libknmui.so.4
#12 0x00007fb7d189ddc1 in SecurityDynamicWep::SecurityDynamicWep(Knm::Connection*, QWidget*) () from /usr/lib/libknmui.so.4
#13 0x00007fb7d1899f01 in WirelessSecuritySettingWidget::setIfaceAndAccessPoint(Solid::Control::WirelessNetworkInterfaceNm09*, Solid::Control::AccessPointNm09*) () from /usr/lib/libknmui.so.4
#14 0x00007fb7d18b32db in WirelessPreferences::WirelessPreferences(bool, QList<QVariant> const&, QWidget*) () from /usr/lib/libknmui.so.4
#15 0x00007fb7d18b498f in ConnectionEditor::editorForConnectionType(bool, QWidget*, Knm::Connection::Type, QList<QVariant> const&) const () from /usr/lib/libknmui.so.4
#16 0x00007fb7d18b4e80 in ConnectionEditor::createConnection(bool, Knm::Connection::Type, QList<QVariant> const&, bool) () from /usr/lib/libknmui.so.4
#17 0x000000000040920c in main ()

Reported using DrKonqi
Comment 1 Nelson Chan 2011-08-27 09:16:40 UTC
Forgot to mention the version of kde networkmangement applet,  it is git-20110824
Comment 2 Lamarque V. Souza 2011-08-27 11:50:49 UTC
Git commit ab72548f8c11ad2cdcb3daed542a7a348ef9c251 by Lamarque V. Souza.
Committed on 27/08/2011 at 13:49.
Pushed by lvsouza into branch 'nm09'.

Prevents crash when configuring WEP access point using
networkmanagement_configshell.

BUG: 280873
FIXED-IN: nm09

M  +2    -0    libs/ui/security/tlswidget.cpp

http://commits.kde.org/networkmanagement/ab72548f8c11ad2cdcb3daed542a7a348ef9c251