Prevents crash when configuring WEP access point using networkmanagement_configshell.

BUG: 280873
FIXED-IN: nm09